<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015.
  ~
  ~ This file is part of Health Network QIS App.
  ~
  ~  Health Network QIS App is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  Health Network QIS App is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/assessment_row"
    android:padding="5dp"
    android:background="@drawable/cell_borders">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:id="@+id/facilityDateContainer"
        android:layout_weight="0.6"
        android:layout_gravity="center">

        <org.eyeseetea.malariacare.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/facility"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            app:tDimension="@string/font_size_level1"
            app:tFontName="@string/medium_font_name" />

        <org.eyeseetea.malariacare.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/survey_type"
            android:layout_gravity="center_vertical"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            app:tDimension="@string/font_size_level1"
            app:tFontName="@string/medium_font_name" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:id="@+id/dateContainer"
        android:layout_weight="0.4"
        android:layout_gravity="center"
        android:gravity="center">

        <org.eyeseetea.malariacare.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/sentDate"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:tDimension="@string/font_size_level1"
            app:tFontName="@string/medium_font_name" />

    </LinearLayout>

</TableRow>