<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015.
  ~
  ~ This file is part of Health Network QIS App.
  ~
  ~  Health Network QIS App is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  Health Network QIS App is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <!-- # general -->
    <string name="app_name" translatable="false">HNQIS</string>

    <!-- default server url -->
    <string name="login_info_dhis_default_server_url" translatable="false">https://data.psi-mis.org/</string>
    <string name="assessment_no_schedule_date" translatable="false">"-"</string>

    <!-- pull control codes -->
    <string name="pull_program_code" translatable="false">HNQIS</string>
    <string name="feedback_url" translatable="false">https://apps.psi-mis.org/hnqis/feedback?eventId=%s&amp;server=%s</string>
</resources>
