<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="yes">"Yes"</string>
<string name="no">"No"</string>
<string name="cancel">"Cancel"</string>
<string name="score">"Score"</string>
<string name="title_id">"ID"</string>
<string name="title_name">"Name"</string>
<string name="good">"Good"</string>
<string name="fair">"Fair"</string>
<string name="poor">"Poor"</string>
<string name="lorem_ipsum">"Lorem ipsum dolor sit amet"</string>
...
<string name="dialog_content_incorrect_org_unit">"Please select a final org unit"</string>
<string name="dialog_content_logout_confirmation">"If you exit the system, all the not sent data will be deleted. Do you still want to exit?"</string>
<string name="dialog_info_ask_for_completion">Are you sure you want to complete %s? You cannot undo this action</string>
<string name="dialog_info_ask_for_completion_plan">Are you sure you want to complete plan? You cannot undo this action</string>

<string name="dashboard_info_feedback">"Feedback"</string>
<string name="dashboard_info_ready_to_upload">"Ready to upload"</string>
<string name="dashboard_info_sent">"Sent"</string>

<string name="create_info_ok">"Start"</string>
<string name="create_info_organization_unit">"Organisation Unit"</string>
<string name="create_info_survey">"Survey"</string>
<string name="create_info_tabs_group">"Tab Group"</string>
...
<string name="settings_menu_legal">"Legal"</string>
<string name="settings_menu_copyright">"Copyright"</string>
<string name="settings_menu_licenses">"Software licenses"</string>
<string name="settings_menu_eula">"EULA"</string>
<string name="go_to_feedback">"Go to feedback"</string>
<string name="dialog_button_preview_feedback">"View Feedback"</string>
<string name="dialog_question_complete_survey">"All compulsory questions were completed. Would you like to mark this survey as completed?"</string>
<string name="dialog_continue_later_option">"Continue Later"</string>
<string name="dialog_complete_option">"Complete"</string>
<string name="dialog_are_you_sure_complete_survey">"Are you sure? This action cannot be undone and you will no longer be able to edit or delete this survey"</string>
<string name="dialog_incompleted_compulsory_survey">"This survey cannot be sent yet. Please answer at least all the compulsory questions"</string>
<string name="dialog_incompleted_compulsory_pulling">"Metadata refresh require delete or complete your unsent data. Please answer at least all the compulsory questions"</string>
<string name="dialog_sent_survey_on_refresh_metadata">"Metadata refresh will delete your unsent data. You have %s unsent surveys. Do you to push them before refresh?"</string>
<string name="cancellingPull">"The process will be stopped in a few seconds "</string>
<string name="dashboard_title_total_assessments">"Total number of assessments undertaken"</string>
...
