/*
 * Copyright (c) 2015.
 *
 * This file is part of Facility QA Tool App.
 *
 *  Facility QA Tool App is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  Facility QA Tool App is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
 */

package org.eyeseetea.malariacare.test.deprecated;

import android.support.test.runner.AndroidJUnit4;

import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.intent.Intents.intended;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static junit.framework.Assert.assertEquals;

import static org.hamcrest.Matchers.allOf;

/**
 *
 */
@RunWith(AndroidJUnit4.class)
public class DashboardActivityExpressoTest extends MalariaEspressoTest{

//    private static String TAG=".DDActivityExpressoTest";
//
//    private final static int _EXPECTED_SURVEYS=2;
//
//    @Rule
//    public IntentsTestRule<DashboardActivity> mActivityRule = new IntentsTestRule<>(
//            DashboardActivity.class);
//
//    @BeforeClass
//    public static void init(){
//        populateData(InstrumentationRegistry.getTargetContext().getAssets());
//        mockSessionSurvey(_EXPECTED_SURVEYS, 1, 0);
//    }
//
//    @Before
//    public void registerIntentServiceIdlingResource(){
//        Log.i(TAG,"---BEFORE---");
//        super.setup();
//        Instrumentation instrumentation = InstrumentationRegistry.getInstrumentation();
//        idlingResource = new IntentServiceIdlingResource(instrumentation.getTargetContext(), SurveyService.class);
//        Espresso.registerIdlingResources(idlingResource);
//    }
//
//    @After
//    public void unregisterIntentServiceIdlingResource(){
//        Log.i(TAG,"---AFTER---");
//        Espresso.unregisterIdlingResources(idlingResource);
//        unregisterSurveyReceiver();
//        getActivityInstance().finish();
//    }
//
//    @Test
//    public void form_views() {
//        Log.i(TAG,"------form_views------");
//        onView(isRoot()).perform(waitId(R.id.plusButton, 3000));
//    }
//
//    @Test
//    public void survey_selected(){
//        Log.i(TAG,"------survey_selected------");
//        //WHEN
//        whenAssessmentSelected("Health Facility 1", "ICM");
//
//        //THEN
//        assertEquals(SurveyActivity.class, getActivityInstance().getClass());
//    }
//
//    @Test
//    public void new_survey_launches_intent(){
//        Log.i(TAG,"------new_survey_launches_intent------");
//        //WHEN
//        onView(withId(R.id.plusButton)).perform(click());
//
//        //THEN
//        intended(anyIntent());
//    }
//
//    @Test
//    public void delete_survey(){
//        Log.i(TAG,"------delete_survey------");
//        //WHEN
//        whenAssessmentSwipeAndOk("Health Facility 0", "ICM");
//
//        //THEN: Check font size has properly changed
//        checkAssessmentDoesntExist("Health Facility 0", "ICM");
//    }
//
//    /**
//     * From Dashboard delete survey
//     * @param orgUnit orgUnit of the survey we want to delete
//     * @param program program of the survey we want to delete
//     */
//    private void whenAssessmentSwipeAndOk(String orgUnit, String program) {
//        onView(allOf(withId(R.id.assessment_row),
//                withChild(allOf(
//                        withChild(allOf(withId(R.id.facility), withText(orgUnit))),
//                        withChild(allOf(withId(R.id.survey_type), withText("- " + program)))))))
//                .perform(swipeRight());
//
//        //Espresso is NOT waiting for the SwipeListener to finish, thus some forced waiting is required
//        try {
//            Thread.sleep(1000);
//            onView(withText(android.R.string.ok)).perform(click());
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//    }
//
//    /**
//     * From Dashboard access survey
//     * @param orgUnit orgUnit of the survey we want to access
//     * @param program program of the survey we want to access
//     */
//    private void whenAssessmentSelected(String orgUnit, String program) {
//        onView(allOf(withId(R.id.assessment_row),
//                withChild(allOf(
//                        withChild(allOf(withId(R.id.facility), withText(orgUnit))),
//                        withChild(allOf(withId(R.id.survey_type), withText("- " + program)))))))
//                .perform(click());
//    }
//
//    private void checkAssessmentDoesntExist(String orgUnit, String program) {
//        onView(allOf(withId(R.id.assessment_row),
//                withChild(allOf(
//                        withChild(allOf(withId(R.id.facility), withText(orgUnit))),
//                        withChild(allOf(withId(R.id.survey_type), withText("- " + program))))))).check(doesNotExist());
//    }
//
//
//    private void unregisterSurveyReceiver(){
//        try{
//            DashboardActivity dashboardActivity =(DashboardActivity)getActivityInstance();
//            DashboardUnsentFragment dashboardUnsentFragment =(DashboardUnsentFragment) dashboardActivity.getFragmentManager().findFragmentById(R.id.dashboard_details_fragment);
//            dashboardUnsentFragment.unregisterSurveysReceiver();
//        }catch(Exception ex){
//            Log.e(TAG,"unregisterSurveyReceiver(): "+ex.getMessage());
//        }
//    }

    @Test
    public void mockTestToAvoidRed(){

    }

}